[package]
name = "courier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.28.0"
tui-input = "0.10.0"
tui-textarea = "0.6.0"
tui-widget-list = "0.12.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde_json = "1.0"
urlencoding = "2.1"
