[package]
name = "courier"
description = "A fast, lightweight TUI HTTP client for testing APIs faster than ever, all from the terminal."
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29.0"
tui-textarea = "0.7.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde_json = "1.0"
urlencoding = "2.1"
